<resources>
    <string name="app_name">STerm</string>
    <string name="baud_rate">Baud rate</string>
    <string name="data_bits">Data bits</string>
    <string name="stop_bits">Stop bits</string>
    <string name="parity">Parity</string>
    <string name="flow_control">Flow control</string>
    <string name="button_serial_port">Open Serial Port</string>
    <string name="button_socket_stub">Open Socket Stub</string>
    <string name="hint_command">Command</string>
    <string name="button_send">Send</string>
    <string name="menu_scripts">Scripts</string>
    <string name="title_activity_scripts">My scripts</string>
    <string name="menu_cloud">Cloud Scripts</string>
    <string name="button_download">Download</string>
    <string name="title_activity_cloud">Cloud scripts</string>
    <string name="menu_load_script">Load</string>
    <string name="menu_delete_script">Delete</string>
    <string name="ctrl_space">Spacebar</string>
    <string name="ctrl_c">Ctrl-C</string>
    <string name="ctrl_z">Ctrl-Z</string>
    <string name="ctrl_escape">EscapeSeq</string>
</resources>
