<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="cn.imaq.serialterminal.MainActivity">
    <item
        android:id="@+id/action_scripts"
        android:title="@string/menu_scripts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_ctrl_space"
        android:title="@string/ctrl_space"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_ctrl_c"
        android:title="@string/ctrl_c"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_ctrl_z"
        android:title="@string/ctrl_z"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_ctrl_escape"
        android:title="@string/ctrl_escape"
        app:showAsAction="never"/>
</menu>
