<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.imaq.serialterminal.ConnectionActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:title="@string/baud_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinnerBaudrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/baudrate"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:title="@string/data_bits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinnerDataBits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/dataBits"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:title="@string/stop_bits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinnerStopBits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/stopBits"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:title="@string/parity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinnerParity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/parity"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:title="@string/flow_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinnerFlowControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/flowControl"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonOpenSerial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:title="@string/button_serial_port"
        android:onClick="onOpenClicked"/>

    <Button
        android:id="@+id/buttonOpenSocket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:title="@string/button_socket_stub"
        android:onClick="onOpenClicked"/>

</LinearLayout>
